--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1",
+    "react-scroll": "^1.7.14",
     "react-typist": "^2.0.5",
     "styled-components": "^4.3.2"
   },
