--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage" : "https://tarekait1996.github.io/ReactPortfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
