--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "https://tarekait1996.github.io/ReactPortfolio",
+  "homepage": "https://tarekait1996.github.io/ReactPortfolio",
   "name": "my-portfolio",
   "version": "0.1.0",
   "private": true,
@@ -13,13 +13,16 @@
     "react-scripts": "3.0.1",
     "react-scroll": "^1.7.14",
     "react-typist": "^2.0.5",
+    "serve": "^11.2.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "heroku-postbuild": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
