--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
     "react-animations": "^1.0.0",
     "react-dom": "^16.8.6",
     "react-reveal": "^1.2.2",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.14",
     "react-typist": "^2.0.5",
     "serve": "^11.2.0",
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "dev": "react-scripts start",
-    "start": "serve -s build",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
