--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "react-scripts": "^3.3.0",
     "react-scroll": "^1.7.14",
     "react-typist": "^2.0.5",
-    "serve": "^11.2.0",
+    "serve": "^11.3.2",
     "styled-components": "^4.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
